# diffusion-path-planning

./: .gitignore  README.md  ash  ash.pub  basic_test.ipynb  demo_visual.py  franka_debug.py  franka_env_dataset.ipynb  implementation_notes.md  notes.md  pipeline_colab.ipynb  pipeline_colab_franka.ipynb  pipeline_colab_gpu.ipynb  pipeline_colab_loadd4rl.ipynb  pipeline_colab_parsing.ipynb  pipeline_justin.ipynb  pipeline_justin_vm.ipynb  plot_minari_maze_dataset.ipynb  plot_sampling.ipynb  pyproject.toml  readme.md  requirements.txt  sampling.ipynb  test.ipynb  test.py  test_rendering.ipynb  test_rendering.py  training_maze2d_wandb.py
diffuser/: pipeline_colab_parsing.py
justin_Arm/: helper.py  interpolation.py  justin_arm_manipulation.py  paths_raw_4123.pkl  testing_diversity.ipynb  training_justin.py  visualize.py  world_4123.pkl
justin_arm/: helper.py  justin_arm_manipulation.py  main_justinarm07.py  pipeline_justin_vm.py  testing_diversity.ipynb  training_justin.py  training_justin_vm.py  visualize.py
justin_ep10_n10000/: diffusion_config.pkl  model_config.pkl  trainer_config.pkl
pipeline_notebooks/: basic_test.ipynb  dataset_exploration.ipynb  pipeline_colab.ipynb  pipeline_colab_gpu.ipynb  pipeline_colab_parsing.ipynb  pipeline_justin.ipynb  pipeline_justin_vm.ipynb  plot_minari_maze_dataset.ipynb  plot_sampling.ipynb  sampling.ipynb
saved/: dataset_config.pkl
saved_justin_ep50_n100/: diffusion_config.pkl
saved_large/: dataset_config.pkl  diffusion_config.pkl  model_config.pkl  render_config.pkl  trainer_config.pkl
temp_dir/: helper.py  visualize.py  (+1 more)
(+45 files in other folders)
