[tool.poetry]
name = "adlr"
version = "0.1.0"
description = "adlr"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mujoco = "2.3.7"
gymnasium-robotics = "1.2.4"
minari = "^0.4.3"
scikit-video = "^1.1.11"
einops = "^0.8.0"

[tool.poetry.dev-dependencies]
